--- a/.github/workflows/herald.yml
+++ b/.github/workflows/herald.yml
@@ -2,7 +2,7 @@ name: Run Herald Bot
 
 on:
   schedule:
-    - cron: "*/10 * * * *"  # каждые 10 минут
+    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 jobs:
