--- a/.github/workflows/herald.yml
+++ b/.github/workflows/herald.yml
@@ -2,29 +2,42 @@ name: Run Herald Bot
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/5 * * * *"   # every 10 minutes (UTC)
   workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install requests
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
+      - name: Restore cookies file from secret
+        run: |
+          test -n "$COOKIES_JSON" || { echo "COOKIES_JSON secret is empty"; exit 1; }
+          echo "$COOKIES_JSON" > herald_playwekings.ru.json
+          ls -la herald_playwekings.ru.json
+        env:
+          COOKIES_JSON: ${{ secrets.COOKIES_JSON }}
 
       - name: Run bot
         env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          CHAT_IDS: ${{ secrets.CHAT_IDS }}
+          BOT_TOKEN:   ${{ secrets.BOT_TOKEN }}
+          CHAT_IDS:    ${{ secrets.CHAT_IDS }}
           COOKIES_FILE: herald_playwekings.ru.json
-          STATE_FILE: notify_state.json
-        run: python bot.py
+          STATE_FILE:   notify_state.json
+        run: |
+          ls -la
+          python bot.py
