--- a/.github/workflows/herald.yml
+++ b/.github/workflows/herald.yml
@@ -2,14 +2,18 @@ name: Herald
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/10 * * * *'
   workflow_dispatch:
 
 jobs:
-  run-bot:
+  run-herald:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -21,20 +25,21 @@ jobs:
 
       - name: Write secrets to files
         run: |
-          echo "${{ secrets.COOKIES_JSON }}" > herald_playwekings.ru.json
+          mkdir -p ~/.config/herald
+          cat <<'EOF' > herald_playwekings.ru.json
+          ${{ secrets.COOKIES_JSON }}
+          EOF
           echo "${{ secrets.BOT_TOKEN }}" > bot_token.txt
 
-      - name: Run bot
+      - name: Run Herald bot
         run: python bot.py
 
       - name: Commit notify_state.json if changed
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          if [[ `git status --porcelain notify_state.json` ]]; then
+          if [[ -f notify_state.json && -n "$(git status --porcelain notify_state.json)" ]]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add notify_state.json
             git commit -m "Update notify_state.json [skip ci]"
             git push
-          else
-            echo "No changes in notify_state.json"
           fi
