--- a/.github/workflows/herald.yml
+++ b/.github/workflows/herald.yml
@@ -2,11 +2,15 @@ name: Herald
 
 on:
   schedule:
-    - cron: '*/20 * * * *'
+    - cron: '*/10 * * * *'
   workflow_dispatch:
 
 permissions:
   contents: write
+
+concurrency:
+  group: herald-bot
+  cancel-in-progress: true
 
 jobs:
   run-herald:
