--- a/.github/workflows/herald.yml
+++ b/.github/workflows/herald.yml
@@ -10,7 +10,7 @@ permissions:
 
 concurrency:
   group: herald-bot
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   run-herald:
@@ -20,6 +20,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
@@ -29,18 +30,18 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           else
             pip install requests
           fi
 
-      - name: Write secrets to files
+      - name: Write cookies to file
         run: |
           cat <<'EOF' > herald_playwekings.ru.json
           ${{ secrets.COOKIES_JSON }}
           EOF
-          printf "%s" "${{ secrets.BOT_TOKEN }}" > bot_token.txt
 
       - name: Run Herald bot
         env:
@@ -56,9 +57,11 @@ jobs:
           if [[ -f notify_state.json && -n "$(git status --porcelain notify_state.json)" ]]; then
             git config user.name "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+            git pull --rebase origin "$(git rev-parse --abbrev-ref HEAD)" || true
+
             git add notify_state.json
             git commit -m "Update notify_state.json [skip ci]"
-            git pull --rebase origin $(git rev-parse --abbrev-ref HEAD) || true
             git push
           else
             echo "No changes in notify_state.json"
