--- a/.github/workflows/herald_watchdog.yml
+++ b/.github/workflows/herald_watchdog.yml
@@ -21,8 +21,17 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          inprog=$(curl -s             -H "Accept: application/vnd.github+json"             -H "Authorization: Bearer $GH_TOKEN"             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/herald.yml/runs?status=in_progress&per_page=1" | jq -r '.total_count')
-          queued=$(curl -s             -H "Accept: application/vnd.github+json"             -H "Authorization: Bearer $GH_TOKEN"             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/herald.yml/runs?status=queued&per_page=1" | jq -r '.total_count')
+          inprog=$(curl -s \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/workflows/herald.yml/runs?status=in_progress&per_page=1" \
+            | jq -r '.total_count')
+
+          queued=$(curl -s \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/workflows/herald.yml/runs?status=queued&per_page=1" \
+            | jq -r '.total_count')
 
           echo "inprog=$inprog" >> "$GITHUB_OUTPUT"
           echo "queued=$queued" >> "$GITHUB_OUTPUT"
@@ -32,4 +41,12 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          curl -s -X POST             -H "Accept: application/vnd.github+json"             -H "Authorization: Bearer $GH_TOKEN"             "https://api.github.com/repos/${{ github.repository }}/actions/workflows/herald.yml/dispatches"             -d "{"ref":"${GITHUB_REF_NAME}"}"
+          ref="${GITHUB_REF_NAME:-main}"
+          payload=$(printf '{"ref":"%s"}' "$ref")
+
+          curl -sS -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            -H "Content-Type: application/json" \
+            "https://api.github.com/repos/${GITHUB_REPOSITORY}/actions/workflows/herald.yml/dispatches" \
+            -d "$payload"
